# playwright-demo

./: conftest.py  index.html  main.py  pyproject.toml  pytest.ini  test_example.py
12/: index.html
13/: index.html
14/: index.html
15/: index.html
16/: index.html
allure-results/: 02522f09-140f-486d-8589-6ac6c630836e-container.json  02b5ab99-6c2f-4c97-ae5f-ac00e9a0ea0d-container.json  02f61901-ab46-458a-9774-7b26bb569138-container.json  0601688a-c136-4169-9268-8b6092a86e44-container.json  0913d60a-e70f-4513-80f4-38f9acdd0892-container.json  0a1d6582-133d-409a-9e51-a4fb3ebba6b4-container.json  0e80c804-b209-45d8-ba75-1084a3b4d004-container.json  122fc196-b0c0-4a0a-8510-bcbc14cad5ab-container.json  12c69583-fc27-401a-920d-0f1dfbc97c16-container.json  1415ea9c-da45-45c7-a4b8-295eb595b556-container.json  1524266d-b425-4d78-bc77-0715bb90f6c4-container.json  1775a306-59a9-4530-9229-dd02501f75c8-container.json  1e5e195e-0b7e-44f1-968f-0c156082db8a-container.json  21fa0460-f574-4ee7-a8ae-d7eebdfb4f1c-result.json  222ade8c-dac2-4a16-b156-2444508fce85-container.json  25c7fb2e-9bf9-4ce6-b42f-131ee792cd7e-container.json  272d4774-15a3-454a-9767-095817a7a914-container.json  2a176088-008a-416a-b9a1-7cfec2411323-container.json  2a539e57-8a19-4601-98ef-e0a9e3e49616-container.json  2af18c1c-b30c-49ef-87a2-9dbff1485e2a-result.json  2b7a365f-db5c-4d21-88b1-a476afd4778b-container.json  2db3b537-fbd4-4bfc-9d0f-34980dcd4174-container.json  2dddc599-f43b-40e8-88bd-025f351a1adb-container.json  37dbb5a0-552e-4889-a6f9-546bcd24ea44-container.json  (+104 more)
last-history/: categories-trend.json  (+1 more)
(+129 files in other folders)
